...
  Widget build(BuildContext context, WidgetRef ref) {
    final user =
        ref.watch(clUsersMasterProvider).valueOrNull?[username] ?? this.user;
    if (user == null) {
      return EntityCard(
        image: EntityImage.initials('?'),
        title: '@$username',
        onTap: onTap,
      );
    }

    final muted =
        user.status == UserStatus.blocked || user.status == UserStatus.left;
...
